# MooLab

./: CMakeLists.txt  README.md  array.hpp  camera.hpp  character.hpp  controller.hpp  curve.hpp  database.hpp  global.hpp  ik.hpp  light.hpp  main.cpp  mat.hpp  material.hpp  mesh.hpp  model.hpp  motion.hpp  nnet.hpp  quat.hpp  renderer.hpp  robot.hpp  shader.hpp  simulator.hpp  spring.hpp  strategy.hpp  texture.hpp  triangle.hpp  ui.hpp  vbsr.cpp  vec.hpp
resources/: Astar.txt  FABRIKtest.txt  Rodrigues.m  controlltest.txt  cross_mat.m  distance_between_line_segment_plane.m  distance_between_line_segments.m  distance_between_point_line_segment.m  distance_between_point_plane.m  human_simulation.m  human_simulation.txt  mattest.txt  moolab.txt  normalize.m  output.txt  quat_to_R.m  rigid_bodies_simulation.txt  train_common.py  train_feature_frame.py  val_control.txt  val_control_true.txt  val_pos.txt  val_quat.txt  val_quat_true.txt  vbsr.txt  x.txt
